--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head >
-
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OMG</title>
 </head>
 <body>
-    <p> adokwl;djalkwjdw jdakwjdkj a</p>
+    <p class="f"> adokwl;djalkwjdw jdakwjdkj a</p>
 </body>
 </html>
